Added bonus - saving and loading a sheet (version history included) to/from a file