@@ -1,26 +1,26 @@
-package operations;
+package operations.impl;
 
 import entities.coordinates.CellCoordinates;
 import entities.sheet.CoreSheet;
+import operations.core.Operation;
 
 import java.util.List;
 
-public class ABSOperation extends Operation {
-
-    public ABSOperation(CoreSheet sheet, CellCoordinates coordinates, List<Object> arguments) {
+public class POWOperation extends Operation {
+    public POWOperation(CoreSheet sheet, CellCoordinates coordinates, List<Object> arguments) {
         super.sheet = sheet;
         this.coordinates = coordinates;
-        super.name = "ABS";
+        super.name = "POW";
         super.arguments = arguments;
     }
 
     @Override
     public Double execute() {
         List<Object> nonOperationObjects = convertToNonOperationObjects();
-        Class<?>[] expectedClazzes ={Number.class};
+        Class<?>[] expectedClazzes ={Number.class, Number.class};
         validateArgumentsTypes(expectedClazzes, nonOperationObjects);
         List<Double> doubles = convertToDouble(nonOperationObjects);
 
-        return Math.abs(doubles.getFirst());
+        return Math.pow(doubles.get(0),doubles.get(1));
     }
 }
